# IA-Imersao-Alura

./: README.md  main.py  requirements.txt
Computer-Vision/: cvzone_solid.py  hand_detector_gestos.py  senoides_py.py
Computer-Vision/cv_zone_Modules/: ColorModuleExample.py  PoseModule.py
Computer_Vision/: controle_gestos_clicks.py  cvzone_solid.py  hand_detector_gestos.py  init_jarvis.py
Computer_Vision/Jarvis_CV/: olhos_jarvis_views.py
Computer_Vision/WebCam/: utils_webcam.py  webcam_cv.py
Computer_Vision/cv_zone_Modules/: ClassificationModuleExample.py  ColorContourExample.py  CornerRectangle.py  CvZoneModule.py  FaceDetectionExample.py  PoseEstimationExample.py  StackImageExample.py  main.py
Computer_Vision/detectors/: encontrar_contornos.py  pose_detector.py
Computer_Vision/math IA/: assistente_matematica.py  retangulos.py
Esp32_Controller/Tela_LCD/: encontrar_lcd.ino
IAMovieEditor/: VideoEditor.py  YoutubeProcessor.py  file_organizador.py  legendas.py  llm_assemblyAI.py  mouse_clicker.py
IAMovieEditor/FlaskPikachuMicro/: app.py  server.py
IAMovieEditor/editor/: audio.py  edit.py
JARVIS/: JarvisLLM.py
LangChain/agentes_ia/: README.md
LangChain_and_CREWAI/: .env  agentes.py
LangChain_and_CREWAI/agentes_ia/: pyproject.toml
LangChain_and_CREWAI/agentes_ia/src/agentes_ia/: main.py
LangChain_and_CREWAI/agentes_ia/src/public/: agente_server.py  agente_trainer.py
Personal_Trainer_APP/: biceps_detector.py
SoccerIA/: fifa13_template.py
src/: TextSpeakClone.py  quem_sou_eu.md
src/app/: tts_clone_voice.py
src/assets/: arquivo.json
(+14 files in other folders)
